Adding ticket order service and README.MD файла